deployment_image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: ghcr.io/henriqueteixeira355/cloud_native
        ports:
        - containerPort: 80
